@@ -8,12 +8,24 @@ basic
    eventTokens.h
       1) added REFUEL EVENT, work in progress
 
+   AngularVelocity class
+      1) Minor update to correct allocating angular objects
+         on stack when performing conversions
+
    Object class
       1) Removed version, magicKey and magicLock member data
+
+   Component class
+      1) Minor update to correct allocating String or Integer
+         object on stack when setting obj selection
 
    LatLon class
       1) Added better input error checking
       2) changed 'LCreal' type variables to type 'double'
+
+   LinearVelocity class
+      1) Minor update to correct allocating distance objects
+         on stack when performing conversions
 
    List class
       1) Removed the find() member function;
